--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://bootswatch.com/4/cerulean/bootstrap.min.css">
   <title>WeatherJS</title>
+  <link rel="icon" href="image/favicon.ico" type = "image/icon">
 </head>
 <body>
   <div class="container">
