change the background

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <label for="unit">Unit</label>
                 <br>
                 <input id="unit" type="radio" name="choice" value="metric"> Metric<br>
-                <input id="unit" type="radio" name="choice" value="imperial"> Imperial<br>
+                <input id="unit" type="radio" name="choice" value="imperial" checked> Imperial<br>
             </div>
           </form>
         </div>
